# upstream-datalake

./: .gitignore  README.md  poetry.bat  pyproject.toml
instruction/: Data Engineer Task - Vehicle Messages Http Server.docx
src/car_etl/: main.py  pipeline.py
src/car_etl/model/: car_schema.py
src/car_etl/transformers/: car_transformer.py
src/datalake/: datalake.py  spark_handler.py
src/datalake/bronze/: bronze.py  integrity.py
src/datalake/gold/: gold.py
src/datalake/silver/: silver.py
src/reader/: read.py
unittests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py  test_spark_handler.py
